--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">retrofit1</string>
+    <string name="app_name">retrofitRx Kotlin</string>
     <string name="github_entries">GitHub Entries:</string>
 </resources>
